--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <div id="shadow-border" class="fixed-content"></div>
             <section id="main-text">
                 <h1>About me</h1>
-                <p>I am a passionate developer specializing in engine and graphics programming. I am currently in my last year of study at <a href="https://www.creajeux.fr/">Creajeux</a>, where I follow a game programmer course and I am currently looking for an internship.</p>
-                <p>During my studies I had the opportunity to work on multiple group projects, using various tools such as <a href="https://trello.com/">Trello</a> and <a href="https://tortoisesvn.net/">TortoiseSVN</a>. We made our first two projects using the <a href="https://www.sfml-dev.org/">SFML</a> in C++ and our last two ones using <a href="https://unity.com/">Unity</a>.</p>
-                <p>I also have some solo projects on my <a href="https://github.com/Renberget">Github</a>, where you can look at my <a href="graphic-api.html">graphic API</a>.</p>
+                <p>A developer specializing in low-level and software programming.</p>
+                <p>Currently, I am doing my final-year internship in the defense field at <a href="https://www.cs-soprasteria.com/">CS Group</a>, where I designed and developed a license system using C++ and <a href="https://cmake.org/">CMake</a>, I also set up CI/CD pipelines in <a href="https://www.jenkins.io/">Jenkins</a> and used <a href="https://podman.io/">Podman</a> for multi-platform builds.</p>
+                <p>I studied at <a href="http://creajeux.fr/">Creajeux</a>, following a game programming course that gave me the opportunity to work on multiple group projects, using various tools such as <a href="https://trello.com/">Trello</a> and <a href="https://tortoisesvn.net/">TortoiseSVN</a>. We made our first two projects using the <a href="https://www.sfml-dev.org/">SFML</a> in C++ and our last two ones using <a href="https://unity.com/">Unity</a>.</p>
+                <p>I also have some solo projects on my <a href="https://github.com/Renberget">Github</a>, where you can look at my <a href="graphic-api.html">graphic API</a> and my <a href="entity-component-system.html">ECS</a>.</p>
                 <p>You can contact me on my <a href="https://www.linkedin.com/in/th%C3%A9o-gazengel-640354262/">LinkedIn</a> or email me to <a href="mailto:theogazengel1@gmail.com">theogazengel1@gmail.com</a>.</p>
             </section>
             <section>
